--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_is_emulator_fixed
 description: Plugin to detect whether the current device is an emulator or simulator (forked and fixed)
-version: 1.0.1
+version: 1.1.0
 author: Edouard Marquez <moi@edouard-marquez.me>
 homepage: https://github.com/dave/flutter_is_emulator_fixed
 
@@ -16,5 +16,5 @@ flutter:
         pluginClass: FlutterIsEmulatorPlugin
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
   flutter: ">=1.10.0 <2.0.0"
